--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <ul class="menu__list">
           <li class="menu__list-item"><a href="">Home</a></li>
+          <li class="menu__list-item"><a href="">Products</a></li>
           <li class="menu__list-item"><a href="">Services</a></li>
           <li class="menu__list-item"><a href="">Gallery</a></li>
         </ul>
